--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,7 @@
 @import "_resets";
 @import "_body";
 @import "_header";
+@import "_why-us";
+@import "_overview";
+@import "_review";
+@import "_footer";
