--- a/sass/_resets.scss
+++ b/sass/_resets.scss
@@ -2,3 +2,19 @@
     box-sizing: border-box;
     margin: 0;
 }
+
+a{
+    cursor: pointer;
+}
+
+input
+{
+padding: 0;
+margin: 0;
+border: 0;
+border: none;
+}
+
+html{
+    scroll-behavior: smooth;
+}
