--- a/sass/_why-us.scss
+++ b/sass/_why-us.scss
@@ -1,19 +1,26 @@
 .why_us{
     min-height: 100vh;
-    background-color: darkcyan;
-    background: url(../img/Rectangle7.jpg);
-    background-position: center left 20%;
-    background-size: cover;
-    background-repeat: no-repeat;
     position: relative;
-    padding-top: 100px;
+
     &__icons{
-        position: absolute;
-        min-height: 337px;
         background-color: #333333;
-        bottom: 0;
-        left: 0;
-        width: 100%;
+    }
+    &__main{
+        background: url(../img/Rectangle7.jpg);
+        background-position: center left 20%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        min-height: 745px;
+}
+    }
+
+
+.img{
+
+    &--why_us{
+        max-width: 350px;
+        max-height: 220px;
+        margin: 2px;
     }
 }
 
@@ -49,13 +56,24 @@
         background-color: rgb(0, 102, 255);
         font-family: 'Aleo', serif;
         margin-top: 40px;
+        transition: transform 1s;
+        
+        cursor: pointer;
+    }
+
+    &__button:hover{
+        transform: scale(1.05);
+    }
+
+    &__button:active{
+        transform: scale(0.9);
     }
 }
 
 .item{
     
     text-align: center;
-
+    margin: 10px;
     &__title{
     font-family: 'Aleo', serif;
     font-weight: 300;
@@ -71,7 +89,9 @@
     border-radius: 300px/105px;
     opacity: 0.5;
     border-top: 1px dotted white;
-
+    @media screen and (max-width:1060px) {
+        display: none;
+    }
 
     &--l{
         left: 207px;
