--- a/css/_why-us.scss
+++ b/css/_why-us.scss
@@ -56,17 +56,19 @@
         background-color: rgb(0, 102, 255);
         font-family: 'Aleo', serif;
         margin-top: 40px;
-        transition: transform 1s;
+        transition: all 1s;
         
         cursor: pointer;
     }
 
     &__button:hover{
         transform: scale(1.05);
+        background-color: rgb(2, 81, 201);
     }
 
     &__button:active{
         transform: scale(0.9);
+        background-color: rgb(55, 135, 255);
     }
 }
 
